# astro-HexMaps

./: .readthedocs.yaml  LICENSE  PyStructure.conf  PyStructure.py  README.md  cli.py  config.txt  create_database.py  pyproject.toml  pystructure_log.txt  requirements.txt  run_hexmaps.py  run_pystructure.py
analysis/: hexmaps_analysis.py  hexmaps_example.ipynb  pystructureAnalysis.py  pystructure_example.ipynb
conversion_from_pystructure/: config_conversion.py  hfs_lines_conversion.py  target_definitions_conversion.py
docs/source/: advanced.rst  codeStruct.rst  conf.py  config.rst  index.rst  installing.rst  quickstart.rst  reading.rst  simpleExample.rst
hexmaps/: __init__.py  cli.py  download_example.py  handler_keys.py  handler_pipeline.py  handler_sources.py  handler_targets.py  hexmaps_analysis.py  init_workdir.py  logger.py  stage_fits.py  stage_products.py  stage_regrid.py  test_hexmaps.py  utils_fits.py  utils_table.py
hexmaps/templates/: config.txt  run_hexmaps.py
keys/: config_key.txt  data_key.txt  hfs_lines.txt  imaging_key.txt  master_key.txt  target_definitions.txt
pystructurePipeline/: __init__.py  cli.py  handlerKeys.py  handlerPipeline.py  handlerSources.py  handler_keys.py  handler_pipeline.py  handler_sources.py  init_workdir.py  pipelineOutput.py  pipelineRegrid.py  pipelineSampling.py  pipelineSpectra.py  pyproject.toml  pystructureLogger.py  stage_fits.py  stage_products.py  stage_regrid.py  test_pystructure.py  utilsFits.py  utilsTable.py  utils_fits.py  utils_table.py
saved_FITS_files/: ngc5194_12co10_emom0.fits  ngc5194_12co10_emom1.fits  ngc5194_12co10_emom2.fits  ngc5194_12co10_mom0.fits  ngc5194_12co10_mom1.fits  ngc5194_12co10_mom2.fits  ngc5194_12co10_rms.fits  ngc5194_12co10_tpeak.fits  ngc5194_12co21_emom0.fits  ngc5194_12co21_emom1.fits  ngc5194_12co21_emom2.fits  ngc5194_12co21_mom0.fits  ngc5194_12co21_mom1.fits  ngc5194_12co21_mom2.fits  ngc5194_12co21_rms.fits  ngc5194_12co21_tpeak.fits
scripts/: PyStructure.py
